@@ -407,8 +407,6 @@ END SUBROUTINE atmproj_tools_init
            IF ( TRIM(spin_component) == "down" .AND. isp == 1 ) CYCLE
            IF ( TRIM(spin_component) == "dw"   .AND. isp == 1 ) CYCLE
 
-           ALLOCATE( ztmp(natomwfc,nbnd), STAT=ierr)
-           IF ( ierr/=0 ) CALL errore(subname,'allocating ztmp', ABS(ierr) )
 
            !
            ! build kham
@@ -417,6 +415,9 @@ END SUBROUTINE atmproj_tools_init
            DO ik = 1, nkpts
                !
                kham(:,:,ik) = ZERO
+               !
+               ALLOCATE( ztmp(natomwfc,nbnd), STAT=ierr)
+               IF ( ierr/=0 ) CALL errore(subname,'allocating ztmp', ABS(ierr) )
                !
                ztmp(:,:) = CONJG( TRANSPOSE( proj(:,:,ik,isp) ) )
                !
@@ -444,7 +445,6 @@ END SUBROUTINE atmproj_tools_init
                    ENDDO
                    !
                ENDDO ibnd_loop
-               ENDDO kpt_loop
                !
                IF ( .NOT. mat_is_herm( dimwann, kham(:,:,ik), TOLL=EPS_m8 ) ) &
                    CALL errore(subname,'kham not hermitian',10)
@@ -516,7 +516,7 @@ END SUBROUTINE atmproj_tools_init
                    !
                ENDIF
                !
-           ENDDO
+           ENDDO kpt_loop
 
            ! 
            ! convert to real space
