@@ -14,17 +14,17 @@
    ! the wannier basis and unfold it according to an extra
    ! spatial periodicity specified by input
    !
-   USE kinds,                ONLY : dbl
-   USE version_module,       ONLY : version_number
-   USE parameters,           ONLY : nstrx
-   USE io_module,            ONLY : stdout, stdin
-   USE io_module,            ONLY : work_dir, prefix, postfix
-   USE io_module,            ONLY : datafile_dft => dftdata_file, datafile_sgm
-   USE control_module,       ONLY : debug_level, use_debug_mode, verbosity, read_pseudo
-   USE control_module,       ONLY : nwfc_buffer, nkb_buffer
-   USE datafiles_module,     ONLY : datafiles_init
-   USE timing_module,        ONLY : timing
-   USE log_module,           ONLY : log_push, log_pop
+   USE kinds,                      ONLY : dbl
+   USE version_module,             ONLY : version_number
+   USE parameters,                 ONLY : nstrx
+   USE io_module,                  ONLY : stdout, stdin
+   USE io_module,                  ONLY : work_dir, prefix, postfix
+   USE io_module,                  ONLY : datafile_dft => dftdata_file, datafile_sgm
+   USE control_module,             ONLY : debug_level, use_debug_mode, verbosity, read_pseudo
+   USE control_module,             ONLY : nwfc_buffer, nkb_buffer
+   USE datafiles_module,           ONLY : datafiles_init
+   USE timing_module,              ONLY : timing
+   USE log_module,                 ONLY : log_push, log_pop
    USE input_parameters_module,    ONLY : string_check, assume_ncpp
    USE want_interfaces_module
    USE parser_module
@@ -43,7 +43,9 @@
    CHARACTER(nstrx)   :: postfix_unfld   ! postfix to describe the unfolded data
    CHARACTER(nstrx)   :: datafile_transl ! specifies the name of the file with the translations
                                          ! usually not needed.
-   REAL(dbl)          :: eshift          ! energy shift when computing the proj Hamiltonian
+   REAL(dbl)          :: atmproj_sh      ! shifthing: energy shift when computing the proj Hamiltonian
+   REAL(dbl)          :: atmproj_thr     ! filtering: thr on projections 
+   INTEGER            :: atmproj_nbnd    ! filtering: # of bands
    LOGICAL            :: do_orthoovp
 
    !
@@ -51,7 +53,7 @@
    !
    NAMELIST /INPUT/ prefix, postfix, postfix_unfld, work_dir, datafile_dft, datafile_transl, &
                     translations, ndiv, debug_level, verbosity, nkb_buffer, nwfc_buffer, assume_ncpp, &
-                    eshift, do_orthoovp
+                    atmproj_sh, atmproj_thr, atmproj_nbnd, do_orthoovp
 
    LOGICAL            :: lhave_transl
    !
@@ -115,7 +117,10 @@ CONTAINS
    USE mp,                   ONLY : mp_bcast
    USE io_module,            ONLY : io_init, ionode, ionode_id
    USE control_module,       ONLY : read_pseudo, use_pseudo
-   USE atmproj_tools_module, ONLY : eshift_ => eshift
+   USE atmproj_tools_module, ONLY : atmproj_sh_ => atmproj_sh, &
+                                    atmproj_thr_ => atmproj_thr, &
+                                    atmproj_nbnd_ => atmproj_nbnd, &
+                                    spin_component_atmproj => spin_component
    !
    IMPLICIT NONE
 
@@ -144,7 +149,9 @@ CONTAINS
       nkb_buffer                  = -1
       assume_ncpp                 = .FALSE.
       do_orthoovp                 = .FALSE.
-      eshift                      = 10.0     
+      atmproj_sh                  = 10.0d0
+      atmproj_thr                 = 0.9d0
+      atmproj_nbnd                = 0
  
       
       CALL input_from_file ( stdin )
@@ -170,7 +177,9 @@ CONTAINS
       CALL mp_bcast( nwfc_buffer,     ionode_id )
       CALL mp_bcast( nkb_buffer,      ionode_id )
       CALL mp_bcast( assume_ncpp,     ionode_id )
-      CALL mp_bcast( eshift,          ionode_id )
+      CALL mp_bcast( atmproj_sh,      ionode_id )
+      CALL mp_bcast( atmproj_thr,     ionode_id )
+      CALL mp_bcast( atmproj_nbnd,    ionode_id )
       CALL mp_bcast( do_orthoovp,     ionode_id )
 
       !
@@ -186,6 +195,11 @@ CONTAINS
       CALL string_check( translations, translations_allowed, ierr)
       IF ( ierr/=0 ) CALL errore(subname,"invalid translations: "//TRIM(translations),10)
       !
+      !
+      IF ( atmproj_thr > 1.0d0 .OR. atmproj_thr < 0.0d0) &
+                                  CALL errore(subname, 'invalid atmproj_thr', 10 )
+      IF ( atmproj_nbnd < 0)      CALL errore(subname, 'invalid atmproj_nbnd', 10 )
+      !
       IF ( TRIM(translations) == "from_scratch" ) lhave_transl = .FALSE.
       IF ( TRIM(translations) == "from_file" )    lhave_transl = .TRUE.
       !
@@ -195,9 +209,12 @@ CONTAINS
 
       !
       ! in case we need this
-      ! pass eshift to atmproj_tools_module
+      ! pass atmproj_ vars to atmproj_tools_module
       !
-      eshift_ = eshift
+      atmproj_sh_ = atmproj_sh
+      atmproj_thr_ = atmproj_thr
+      atmproj_nbnd_ = atmproj_nbnd
+
 
 
 
@@ -236,7 +253,9 @@ CONTAINS
           IF ( LEN_TRIM( datafile_dft ) /= 0 ) THEN
               WRITE( stdout,"(7x,'          datafile_dft :',5x,   a)") TRIM(datafile_dft)
               WRITE( stdout,"(7x,'       use ortho basis :',5x,   a)") TRIM( log2char(do_orthoovp) )
-              WRITE( stdout,"(7x,'          energy shift :',5x,  f12.6)") eshift
+              WRITE( stdout,"(7x,'         atmproj shift :',5x,  f12.6)") atmproj_sh
+              WRITE( stdout,"(7x,'          atmproj nbnd :',5x,   i5)") atmproj_nbnd
+              WRITE( stdout,"(7x,'           atmproj thr :',5x,  f12.6)") atmproj_thr
           ENDIF
           !
           IF ( LEN_TRIM( datafile_transl ) /= 0 ) &
